--- a/src/applications/ArchiToolkit.CppInteropGenerator/Views/UserControls/ConvertItemControl.xaml
+++ b/src/applications/ArchiToolkit.CppInteropGenerator/Views/UserControls/ConvertItemControl.xaml
@@ -1,23 +1,17 @@
-﻿<Page
-    Title="DashboardPage"
-    d:DataContext="{d:DesignInstance local:DashboardPage,
+﻿<UserControl
+    d:DataContext="{d:DesignInstance vm:ConvertItemViewModel,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    x:Class="ArchiToolkit.CppInteropGenerator.Views.Pages.DashboardPage"
+    x:Class="ArchiToolkit.CppInteropGenerator.Views.UserControls.ConvertItemControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ArchiToolkit.CppInteropGenerator.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:vm="clr-namespace:ArchiToolkit.CppInteropGenerator.ViewModels.UserControls"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid>
-        <ui:Button
-            Content="Hello"
-            IsEnabled="False"
-            ToolTip=" Hi" />
-    </Grid>
-</Page>
+    <ui:Card />
+</UserControl>
