:sparkles: add the first page.

--- a/src/applications/ArchiToolkit.CppInteropGenerator/Views/Pages/DashboardPage.xaml
+++ b/src/applications/ArchiToolkit.CppInteropGenerator/Views/Pages/DashboardPage.xaml
@@ -17,6 +17,33 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <StackPanel Orientation="Vertical">
-        <ui:TextBlock Text="{Binding ViewModel.PageDescription}" />
+        <ui:TextBlock Margin="0,0,0,10" Text="{Binding ViewModel.PageDescription}" />
+
+        <DockPanel Margin="0,5">
+            <ui:Button
+                Command="{Binding ViewModel.OpenFolderDialogCommand}"
+                DockPanel.Dock="Right"
+                Icon="{ui:SymbolIcon Folder16}"
+                Margin="5,0,0,0" />
+            <ui:TextBlock
+                DockPanel.Dock="Bottom"
+                Margin="20,0"
+                Text="This folder doesn't exist."
+                Visibility="{Binding ViewModel.WarningVisibility}" />
+            <ui:TextBox
+                PlaceholderText="The out put folder path"
+                Text="{Binding ViewModel.OutputPath}"
+                TextChanged="TextBoxBase_OnTextChanged" />
+        </DockPanel>
+
+        <ui:TextBox
+            Margin="0,5"
+            PlaceholderText="Leading Name Space"
+            Text="{Binding ViewModel.LeadingNameSpace}" />
+
+        <ui:TextBox
+            Margin="0,5"
+            PlaceholderText="Default dynamic Library Name"
+            Text="{Binding ViewModel.DefaultDllName}" />
     </StackPanel>
 </Page>
