--- a/src/applications/ArchiToolkit.CppInteropGenerator/Views/MainWindow.xaml
+++ b/src/applications/ArchiToolkit.CppInteropGenerator/Views/MainWindow.xaml
@@ -69,5 +69,7 @@
                 <ui:SnackbarPresenter x:Name="SnackbarPresenter" />
             </ui:NavigationView.ContentOverlay>
         </ui:NavigationView>
+
+        <ContentPresenter x:Name="ContentDialogPresenter" />
     </Grid>
 </ui:FluentWindow>
